--- a/client/src/Components/GameOver/GameOver.module.css
+++ b/client/src/Components/GameOver/GameOver.module.css
@@ -1,10 +1,23 @@
 .containerGameOver {
     display: flex;
-    position: relative;
+    position: relative; 
     background-color: bisque; 
     background-image: url(./tamagotchiDead.png); 
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
     margin: 0;
+}
+
+.containerGameOverButtons {
+    display: flex; 
+    position: absolute;
+    flex-direction: column;
+    
+    height: 300px;
+    width: 160px;
+
+    top:90px;
+    left: 50px;
+  
 }
